checkmarx fixes
